Fixed banner picture

--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -26,7 +26,11 @@ body {
 
 footer {
     background-color: #198754;
-    padding: 1rem 0;
+    padding: 0.7rem 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 footer p {
