--- a/GreenMarketBackend/Views/Accounts/Login.cshtml
+++ b/GreenMarketBackend/Views/Accounts/Login.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Login";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
-
+<head>
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap/js/boostrap.min.js"></script>
+</head>
 <div>
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
         <div class="card shadow-sm w-100" style="max-width: 400px;">
