--- a/GreenMarketBackend/Views/Accounts/Register.cshtml
+++ b/GreenMarketBackend/Views/Accounts/Register.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Register";
+    Layout = null;
 }
+<head>
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap/js/boostrap.min.js"></script>
+</head>
 
 <div>
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
