Added other views

--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -37,9 +37,13 @@ footer p {
     margin: 0;
 }
 
-.navbar {
-    background: transparent !important;
-    box-shadow: none;
+/*.navbar {*/
+    /*background: transparent !important;*/
+    /*box-shadow: none;
+}*/
+
+.navbarAcc {
+    background: green;
 }
 
 .navbar-nav .nav-link {
