--- a/GreenMarketBackend/Views/Home/Index.cshtml
+++ b/GreenMarketBackend/Views/Home/Index.cshtml
@@ -4,31 +4,12 @@
 }
 
 <div>
-    <!-- Navigation Bar -->
-@*     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Green Market</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Accounts" asp-action="Login">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Products" asp-action="Index">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav> *@
-
     <!-- Banner Section -->
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-4">Welcome to the Green Market</h1>
             <p class="lead">Your source for fresh, organic, and locally sourced produce</p>
-            <a href="products.html" class="btn btn-light">Shop Now</a>
+            <a class="btn btn-light" asp-controller="Products" asp-action="Products">Shop Now</a>
         </div>
     </div>
 
