--- a/GreenMarketBackend/Views/Products/Products.cshtml
+++ b/GreenMarketBackend/Views/Products/Products.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Products";
+    Layout = "~/Views/Shared/_NavBar.cshtml";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -8,30 +9,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Green Market</title>
-    <!-- Bootstrap 5.2.3 CSS -->
+    <!-- Bootstrap 5.2.3 CSS -->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Green Market</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+
 
     <!-- Main Content -->
     <div class="container my-5" id="products">
@@ -84,11 +69,6 @@
 
         </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="text-center py-4 text-white">
-        <p>&copy; 2024 Green Market. All Rights Reserved.</p>
-    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
