--- a/GreenMarketBackend/Views/Shared/_Layout.cshtml
+++ b/GreenMarketBackend/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: transparent">
             <div class="container">
                 <a class="navbar-brand" href="#">Green Market</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,11 +33,10 @@
         <script src="~/lib/bootstrap/js/boostrap.min.js"></script>
     </main>
 
-    <footer class="text-center py-4 text-white">
+    <footer class="py-1 text-white text-sm-center">
         <p>&copy; 2024 Green Market. All Rights Reserved.</p>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-</body>
 </html>
