--- a/GreenMarketBackend/Views/Home/Index.cshtml
+++ b/GreenMarketBackend/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="container">
             <h1 class="display-4">Welcome to the Green Market</h1>
             <p class="lead">Your source for fresh, organic, and locally sourced produce</p>
-            <a class="btn btn-light" asp-controller="Products" asp-action="Products">Shop Now</a>
+            <a class="btn btn-light" asp-controller="Products" asp-action="Index">Shop Now</a>
         </div>
     </div>
 
