--- a/GreenMarketBackend/Views/Accounts/Login.cshtml
+++ b/GreenMarketBackend/Views/Accounts/Login.cshtml
@@ -1,28 +1,31 @@
-﻿@{
+﻿@model GreenMarketBackend.Models.ViewModels.LoginViewModel
+@{
     ViewData["Title"] = "Login";
     Layout = null;
 }
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Green Market</title>
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/lib/bootstrap/js/boostrap.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 </head>
-<div>
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
         <div class="card shadow-sm w-100" style="max-width: 400px;">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4">Login to Green Market</h3>
                 <form method="post" action="/account/login">
                     <div class="mb-3">
-                        <label for="inputEmail" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="inputEmail" name="email" required>
+                        <label for="inputEmail" class="form-label">Email Address</label>
+                        <input type="email" class="form-control" id="inputEmail" name="Email" value="@Model.Email" required>
                     </div>
                     <div class="mb-3">
                         <label for="inputPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" name="password" autocomplete="current-password" required>
+                        <input type="password" class="form-control" id="inputPassword" name="Password" value="@Model.Password" autocomplete="current-password" required>
                     </div>
                     <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
+                        <input type="checkbox" class="form-check-input" id="rememberMe" name="RememberMe">
                         <label class="form-check-label" for="rememberMe">Remember Me</label>
                     </div>
                     <button type="submit" class="btn btn-success w-100">Login</button>
@@ -33,4 +36,5 @@
             </div>
         </div>
     </div>
-</div>
+
+
