--- a/GreenMarketBackend/Views/Accounts/Register.cshtml
+++ b/GreenMarketBackend/Views/Accounts/Register.cshtml
@@ -1,41 +1,53 @@
-﻿@{
+﻿@model GreenMarketBackend.Models.ViewModels.RegisterViewModel
+@{
     ViewData["Title"] = "Register";
     Layout = null;
 }
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Green Market</title>
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/lib/bootstrap/js/boostrap.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 </head>
-
-<div>
+<body>
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
         <div class="card shadow-sm w-100" style="max-width: 400px;">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4">Register for Green Market</h3>
                 <form method="post" action="/account/register" autocomplete="on">
                     <div class="mb-3">
-                        <label for="inputUsername" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="inputUsername" name="username" required>
+                        <label for="inputFirstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="inputFirstName" name="FirstName" value="@Model.FirstName" required>
                     </div>
                     <div class="mb-3">
-                        <label for="inputEmail" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="inputEmail" name="email" required>
+                        <label for="inputLastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="inputLastName" name="LastName" value="@Model.LastName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputEmail" class="form-label">Email Address</label>
+                        <input type="email" class="form-control" id="inputEmail" name="Email" value="@Model.Email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputPhoneNumber" class="form-label">Phone Number</label>
+                        <input type="tel" class="form-control" id="inputPhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required>
                     </div>
                     <div class="mb-3">
                         <label for="inputPassword" class="form-label">Password</label>
-                        <input type="password" autocomplete="new-password" class="form-control" id="inputPassword" name="password" required>
+                        <input type="password" class="form-control" id="inputPassword" name="Password" autocomplete="new-password" required>
                     </div>
                     <div class="mb-3">
                         <label for="inputConfirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="inputConfirmPassword" name="confirmPassword" required>
+                        <input type="password" class="form-control" id="inputConfirmPassword" name="ConfirmPassword" required>
                     </div>
                     <button type="submit" class="btn btn-success w-100">Register</button>
                     <div class="text-center mt-3">
-                        Already have an account?  <a class="link-primary" asp-controller="Accounts" asp-action="Login">Login</a>
+                        Already have an account? <a class="link-primary" asp-controller="Accounts" asp-action="Login">Login</a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-</div>
+</body>
+
