--- a/GreenMarketBackend/Views/Register/Index.cshtml
+++ b/GreenMarketBackend/Views/Register/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="card shadow-sm w-100" style="max-width: 400px;">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4">Register for Green Market</h3>
-                <form method="post" action="/account/register" autocomplete="on">
+                <form method="post" action="/Register" autocomplete="on">
                     <div class="mb-3">
                         <label for="inputFirstName" class="form-label">First Name</label>
                         <input type="text" class="form-control" id="inputFirstName" name="FirstName" value="@Model.FirstName" required>
@@ -28,6 +28,14 @@
                     <div class="mb-3">
                         <label for="inputEmail" class="form-label">Email Address</label>
                         <input type="email" class="form-control" id="inputEmail" name="Email" value="@Model.Email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputUsername" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="inputUsername" name="Username" value="@Model.Username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputAddress" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="inputAddress" name="Address" value="@Model.Address" required>
                     </div>
                     <div class="mb-3">
                         <label for="inputPhoneNumber" class="form-label">Phone Number</label>
