--- a/GreenMarketBackend/Views/Register/Index.cshtml
+++ b/GreenMarketBackend/Views/Register/Index.cshtml
@@ -15,33 +15,33 @@
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
         <div class="card shadow-sm w-100" style="max-width: 400px;">
             <div class="card-body">
-                <h3 class="card-title text-center mb-4">Register for Green Market</h3>
+                <h3 class="card-title text-center mb-4 mt-2">Register for Green Market</h3>
                 <form method="post" action="/Register" autocomplete="on">
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputFirstName" class="form-label">First Name</label>
                         <input type="text" class="form-control" id="inputFirstName" name="FirstName" value="@Model.FirstName" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputLastName" class="form-label">Last Name</label>
                         <input type="text" class="form-control" id="inputLastName" name="LastName" value="@Model.LastName" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputEmail" class="form-label">Email Address</label>
                         <input type="email" class="form-control" id="inputEmail" name="Email" value="@Model.Email" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputUsername" class="form-label">Username</label>
                         <input type="text" class="form-control" id="inputUsername" name="Username" value="@Model.Username" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputAddress" class="form-label">Address</label>
                         <input type="text" class="form-control" id="inputAddress" name="Address" value="@Model.Address" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputPhoneNumber" class="form-label">Phone Number</label>
                         <input type="tel" class="form-control" id="inputPhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <label for="inputPassword" class="form-label">Password</label>
                         <input type="password" class="form-control" id="inputPassword" name="Password" autocomplete="new-password" required>
                     </div>
@@ -58,4 +58,3 @@
         </div>
     </div>
 </body>
-
