--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -53,3 +53,35 @@ footer p {
 .navbar-nav .nav-link:hover {
     text-decoration: underline;
 }
+
+.google-btn {
+    display: inline-flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: #757575;
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 24px;
+    font-size: 16px;
+    padding: 8px 12px;
+    text-decoration: none;
+    width: 100%;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.google-btn:hover {
+    background-color: #f5f5f5;
+    border-color: #ccc;
+    color: #333;
+}
+
+.google-icon {
+    height: 20px;
+    width: 20px;
+    margin-right: 8px;
+}
+
+.google-btn span {
+    font-weight: bold;
+}
