--- a/GreenMarketBackend/Views/Login/ExternalLogin.cshtml
+++ b/GreenMarketBackend/Views/Login/ExternalLogin.cshtml
@@ -2,40 +2,49 @@
 @{
     Layout = "~/Views/Shared/_NavBar.cshtml";
 }
+<link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+<link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 
 <h1>External Login</h1>
 
-<p>Please enter your details to complete your registration.</p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h1 class="text-center">Complete Your Registration</h1>
+            <p class="text-center">Please enter your details to complete your registration.</p>
+
+
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Login", new { ReturnUrl = ViewData["ReturnUrl"] }))
 {
     @Html.AntiForgeryToken()
 
-    <div>
-        <p>
-            <strong>Email:</strong> @Model.Email
-        </p>
-        <div>
-            @Html.LabelFor(m => m.Email)
-            @Html.TextBoxFor(m => m.Email, new { @readonly = "readonly" })
-            @Html.ValidationMessageFor(m => m.Email)
-        </div>
-        <div>
-            @Html.LabelFor(m => m.FirstName)
-            @Html.TextBoxFor(m => m.FirstName)
-            @Html.ValidationMessageFor(m => m.FirstName)
-        </div>
-        <div>
-            @Html.LabelFor(m => m.LastName)
-            @Html.TextBoxFor(m => m.LastName)
-            @Html.ValidationMessageFor(m => m.LastName)
-        </div>
-        <div>
-            @Html.LabelFor(m => m.Address)
-            @Html.TextBoxFor(m => m.Address)
-            @Html.ValidationMessageFor(m => m.Address)
-        </div>
+                <div class="mb-3">
+                    <label for="Email" class="form-label">Email</label>
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                </div>
+                <div class="mb-3">
+                    <label for="FirstName" class="form-label">First Name</label>
+                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+                </div>
+                <div class="mb-3">
+                    <label for="LastName" class="form-label">Last Name</label>
+                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+                </div>
+                <div class="mb-3">
+                    <label for="Address" class="form-label">Address</label>
+                    @Html.TextBoxFor(m => m.Address, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
+                </div>
+                <div class="mb-3">
+                    <label for="PhoneNumber" class="form-label">Phone Number</label>
+                    @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+                </div>
+                <button type="submit" class="btn btn-success w-100">Register</button>
 
-        <button type="submit">Register</button>
-    </div>
 }
