--- a/GreenMarketBackend/Views/Login/ExternalLogin.cshtml
+++ b/GreenMarketBackend/Views/Login/ExternalLogin.cshtml
@@ -13,12 +13,9 @@
         <div class="col-md-6">
             <h1 class="text-center">Complete Your Registration</h1>
             <p class="text-center">Please enter your details to complete your registration.</p>
-
-
-
-@using (Html.BeginForm("ExternalLoginConfirmation", "Login", new { ReturnUrl = ViewData["ReturnUrl"] }))
-{
-    @Html.AntiForgeryToken()
+            @using (Html.BeginForm("ExternalLoginConfirmation", "Login", new { ReturnUrl = ViewData["ReturnUrl"] }))
+            {
+                @Html.AntiForgeryToken()
 
                 <div class="mb-3">
                     <label for="Email" class="form-label">Email</label>
@@ -46,5 +43,7 @@
                     @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
                 </div>
                 <button type="submit" class="btn btn-success w-100">Register</button>
-
-}
+            }
+        </div>
+    </div>
+</div>
