--- a/GreenMarketBackend/Views/Account/Index.cshtml
+++ b/GreenMarketBackend/Views/Account/Index.cshtml
@@ -17,19 +17,23 @@
                     <input asp-for="Email" class="form-control" readonly />
                 </div>
                 <div class="form-group mb-2">
-                    <label asp-for="FirstName" class="control-label"></label>
+                    <label asp-for="FirstName" class="control-label">First Name</label>
                     <input asp-for="FirstName" class="form-control" />
                 </div>
                 <div class="form-group mb-2">
-                    <label asp-for="LastName" class="control-label"></label>
+                    <label asp-for="LastName" class="control-label">Last Name</label>
                     <input asp-for="LastName" class="form-control" />
+                </div>
+                <div class="form-group mb-2">
+                    <label asp-for="Username" class="control-label"></label>
+                    <input asp-for="Username" class="form-control" />
                 </div>
                 <div class="form-group mb-2">
                     <label asp-for="Address" class="control-label"></label>
                     <input asp-for="Address" class="form-control" />
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="PhoneNumber" class="control-label"></label>
+                    <label asp-for="PhoneNumber" class="control-label">Phone Number</label>
                     <input asp-for="PhoneNumber" class="form-control" />
                 </div>
                 <button type="submit" class="btn btn-primary">Save Changes</button>
