--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -1,15 +1,15 @@
 html, body {
     height: 100%;
-    margin: 0;
     display: flex;
     flex-direction: column;
 }
 
 body {
     font-family: 'Arial', sans-serif;
+    margin: 0;
 }
 
-.container-fluid, .container {
+main {
     flex: 1;
 }
 
@@ -17,7 +17,7 @@ body {
     background-image: url('https://t4.ftcdn.net/jpg/03/03/45/25/360_F_303452599_eZMGXe7awggqAHTQXpjzBFehJBEyw4QR.jpg');
     background-position: center;
     background-size: cover;
-    width: 100%; 
+    width: 100%;
     color: white;
     text-align: center;
     padding: 8rem 1rem;
@@ -27,20 +27,13 @@ body {
 footer {
     background-color: #198754;
     padding: 0.7rem 0;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    text-align: center;
     width: 100%;
 }
 
 footer p {
     margin: 0;
 }
-
-/*.navbar {*/
-    /*background: transparent !important;*/
-    /*box-shadow: none;
-}*/
 
 .navbarAcc {
     background: green;
