--- a/GreenMarketBackend/Views/Account/Index.cshtml
+++ b/GreenMarketBackend/Views/Account/Index.cshtml
@@ -1,4 +1,5 @@
-﻿    @model GreenMarketBackend.Models.ViewModels.AccountViewModel
+﻿@using GreenMarketBackend.Models.ViewModels.AccountViewModels
+@model AccountViewModel
 @{
     ViewData["Title"] = "Account";
     Layout = "_NavBar"; 
