--- a/GreenMarketBackend/Views/Login/ExternalLogin.cshtml
+++ b/GreenMarketBackend/Views/Login/ExternalLogin.cshtml
@@ -1,4 +1,5 @@
-﻿@model GreenMarketBackend.Models.ViewModels.ExternalLoginViewModel
+﻿@using GreenMarketBackend.Models.ViewModels.AccountViewModels
+@model ExternalLoginViewModel
 @{
     Layout = "~/Views/Shared/_NavBar.cshtml";
 }
