--- a/GreenMarketBackend/Views/Login/Index.cshtml
+++ b/GreenMarketBackend/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model GreenMarketBackend.Models.ViewModels.LoginViewModel
+﻿@using GreenMarketBackend.Models.ViewModels.AccountViewModels
+@model LoginViewModel
 @{
     ViewData["Title"] = "Login";
     Layout = null;
