--- a/GreenMarketBackend/Views/Products/Create.cshtml
+++ b/GreenMarketBackend/Views/Products/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model GreenMarketBackend.Models.ViewModels.ProductViewModel
-
+﻿@using GreenMarketBackend.Models.ViewModels.ProductViewModels
+@model ProductViewModel
 @{
     ViewData["Title"] = "Create Product";
     Layout = "~/Views/Shared/_NavBar.cshtml";
