--- a/GreenMarketBackend/Views/Products/Index.cshtml
+++ b/GreenMarketBackend/Views/Products/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model GreenMarketBackend.Models.ViewModels.ProductFilterViewModel
-
+﻿@using GreenMarketBackend.Models.ViewModels.ProductViewModels
+@model ProductFilterViewModel
 @{
     ViewData["Title"] = "Products";
     Layout = "~/Views/Shared/_NavBar.cshtml";
