--- a/GreenMarketBackend/Views/Register/Index.cshtml
+++ b/GreenMarketBackend/Views/Register/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model GreenMarketBackend.Models.ViewModels.RegisterViewModel
+﻿@using GreenMarketBackend.Models.ViewModels.AccountViewModels
+@model RegisterViewModel
 @{
     ViewData["Title"] = "Register";
     Layout = null;
