--- a/GreenMarketBackend/Views/Products/Details.cshtml
+++ b/GreenMarketBackend/Views/Products/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@model GreenMarketBackend.Models.ViewModels.ProductDetailsViewModel
-
+﻿@using GreenMarketBackend.Models.ViewModels.ProductViewModels
+@model ProductDetailsViewModel
 @{
     ViewData["Title"] = "Product Details";
     Layout = "_NavBar";
