--- a/GreenMarketBackend/Views/Cart/Index.cshtml
+++ b/GreenMarketBackend/Views/Cart/Index.cshtml
@@ -23,13 +23,13 @@
             @foreach (var item in Model.CartItems)
             {
                 <tr>
-                    <td>@item.Product.Name</td>
+                    <td>@item.ProductName</td>
+                    <td>@item.Price.ToString("C")</td>
                     <td>@item.Quantity</td>
-                    <td>@item.PriceAtTimeOfPurchase.ToString("C")</td>
-                    <td>@(item.Quantity * item.PriceAtTimeOfPurchase).ToString("C")</td>
+                    <td>@item.Total.ToString("C")</td>
                     <td>
                         <form asp-action="RemoveFromCart" method="post">
-                            <input type="hidden" name="cartItemId" value="@item.CartItemId" />
+                            @* <input type="hidden" name="cartItemId" value="@item.CartItemId" /> *@
                             <button type="submit" class="btn btn-danger btn-sm">Remove</button>
                         </form>
                     </td>
@@ -38,7 +38,7 @@
         </tbody>
     </table>
     <div class="text-right">
-        <h4>Total: @Model.TotalAmount.ToString("C")</h4>
+        <h4>Total: @Model.TotalAmount</h4>
     </div>
 }
 else
