--- a/GreenMarketBackend/Views/Cart/Index.cshtml
+++ b/GreenMarketBackend/Views/Cart/Index.cshtml
@@ -28,8 +28,8 @@
                     <td>@item.Quantity</td>
                     <td>@item.Total.ToString("C")</td>
                     <td>
-                        <form asp-action="RemoveFromCart" method="post">
-                            @* <input type="hidden" name="cartItemId" value="@item.CartItemId" /> *@
+                        <form asp-controller="Cart" asp-action="RemoveFromCart" method="post" onsubmit="return confirmDelete()">
+                            <input type="hidden" name="cartItemId" value="@item.CartItemId" />
                             <button type="submit" class="btn btn-danger btn-sm">Remove</button>
                         </form>
                     </td>
@@ -45,5 +45,10 @@ else
 {
     <p>Your cart is empty.</p>
 }
+<script>
+    function confirmDelete() {
+        return confirm("Are you sure you want to remove this item from the cart?");
+    }
+</script>
 
-@* <a asp-controller="Checkout" asp-action="Index" class="btn btn-primary">Proceed to Checkout</a> *@
+<a asp-controller="Checkout" asp-action="Index" class="btn btn-primary">Proceed to Checkout</a>
