--- a/GreenMarketBackend/Views/Shared/_NavBar.cshtml
+++ b/GreenMarketBackend/Views/Shared/_NavBar.cshtml
@@ -32,6 +32,9 @@
                     <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-controller="Chat" asp-action="Index">Chat</a>
+                    </li>
+                    <li class="nav-item">
                     @if (User.Identity.IsAuthenticated)
                         {
                         <li class="nav-item">
